# hachathon-physical-ai-and-humanoid-robotics-textbook

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md
.claude/: settings.local.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
frontend_book/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
frontend_book/docs/: intro.md  setup-guide.md
frontend_book/docs/module-1/: chapter-1-ros2-fundamentals.md  chapter-2-python-agents-controllers.md  chapter-3-humanoid-modeling-urdf.md
frontend_book/docs/module-2/: chapter-1-gazebo-physics.md  chapter-2-unity-rendering.md  chapter-3-sensor-simulation.md  index.md
frontend_book/docs/module-3/: index.md  (+3 more)
frontend_book/static/examples/whisper_voice_commands/whisper_ros2/: package.xml  setup.py
frontend_book/static/examples/whisper_voice_commands/whisper_ros2/config/: voice_commands.yaml
frontend_book/static/examples/whisper_voice_commands/whisper_ros2/launch/: voice_interface.launch.py
frontend_book/static/examples/whisper_voice_commands/whisper_ros2/whisper_ros2/: __init__.py  voice_command_node.py
ros2-examples/: workspace_setup.sh
ros2-examples/module_1_urdf/: README.md  joint_controller_example.py  simple_humanoid.urdf
specs/001-ros2-robotic-nervous-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-digital-twin-simulation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-isaac-ai-brain/: plan.md  research.md  spec.md  tasks.md
specs/004-vision-language-action/: plan.md  spec.md  tasks.md
(+89 files in other folders)
